cloudformation.YAML
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create EC2 instance with an existing Elastic IP and security groups

Resources:
  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2Instance
      AllocationId: eipalloc-0349c3c2f21dfc1f8

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08eb150f611ca277f
      InstanceType: t3.micro
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref ServerSecurityGroup
      KeyName: Wordpress
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash

          # Log file path
          LOG_FILE="/var/log/script_execution.log"

          # Function to check the exit status of the last executed command
          check_exit_status() {
              if [ $? -ne 0 ]; then
                  echo "Error: $1 failed." | tee -a $LOG_FILE
                  exit 1
              else
                  echo "$1 succeeded." | tee -a $LOG_FILE
              fi
          }

          # Clear the log file at the beginning of the script
          > $LOG_FILE

          # Update package lists
          echo "Running apt update..." | tee -a $LOG_FILE
          sudo apt -y update
          check_exit_status "apt update"

          # Upgrade installed packages
          echo "Running apt upgrade..." | tee -a $LOG_FILE
          sudo apt -y upgrade
          check_exit_status "apt upgrade"

          # Clone the GitHub repository
          echo "Cloning GitHub repository..." | tee -a $LOG_FILE
          sudo git clone -b test https://github.com/Iqrazamir1/WordPressPractise.git /root/WordPressPractise
          check_exit_status "git clone"

          # Change permissions of the cloned repository
          echo "Changing permissions of the cloned repository..." | tee -a $LOG_FILE
          sudo chmod -R 755 /root/WordPressPractise
          check_exit_status "chmod"

          # Run the setup script
          echo "Running lemp-setup.sh script..." | tee -a $LOG_FILE
          sudo bash /root/WordPressPractise/lemp_stack_automate.sh
          check_exit_status "lemp-setup.sh"


  # EC2 security group for SSH access
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22

  # EC2 security group for HTTP access
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable accessing server via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
